@@ -1,11 +1,8 @@
-This lists only the changes for the current release (v1.23) over the last
+This lists only the changes for the current release (v1.24) over the last
 version, since CHANGES is now quite big:
 
-* Math::String::Charset used Math::String::Charset::Wordlist, instead of
-  requiring it. This means install of Math::String failed w/o an installed
-  Math::String::Charset::Wordlist, which in turn needed installed Math::String.
-  Oups.
-* removed the needless shebang (#!/usr/bin/perl ..) lines
-* added "lib => 'GMP'" to all 'use Math::BigInt;' lines
-* prerequisite Math::BigInt v1.65
-* 595 tests
+* new( { str => ..., num => ... } ) did not take a possible scale from the
+  charset into account
+* added tests for new() with two-arg-form and scaled charset
+* prerequisite Math::BigInt v1.67
+* 599 tests
